force-app/main/default/objects/Bank_Submission__c/Bank_Submission__c.object-meta.xml
<CustomObject>
    <label>Application Submission</label>
    <nameField>
        <displayFormat>B-{0}</displayFormat>
        <label>Bank Submission No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>