force-app/main/default/objects/Bank_Submission__c/fields/Acquirer__c.field-meta.xml
<CustomField>
    <fullName>Acquirer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acquirer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Bank_Submissions_Banks</relationshipName>
    <type>Lookup</type>
</CustomField>