force-app/main/default/objects/Bank_Submission__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipName>Bank_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>