force-app/main/default/objects/Bank_Submission__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Date merchant&apos;s account was approved by bank.</description>
    <inlineHelpText>Date merchant&apos;s account was approved by bank.</inlineHelpText>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>