force-app/main/default/objects/Bank_Submission__c/fields/Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notes__c</fullName>
    <label>Approval / Reserve Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>