force-app/main/default/objects/Bank_Submission__c/fields/Approved_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Approved_Monthly_Volume__c</fullName>
    <description>Approved volume per month for this MID.</description>
    <inlineHelpText>Approved volume per month for this MID.</inlineHelpText>
    <label>Approved Monthly Volume $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>