force-app/main/default/objects/Bank_Submission__c/fields/Approved_Terminated_Formula__c.field-meta.xml
<CustomField>
    <fullName>Approved_Terminated_Formula__c</fullName>
    <formula>IF( ISPICKVAL(Apps__c, &quot;Terminated&quot;), TRUE, IF( ISPICKVAL(Apps__c, &quot;Approved&quot;), TRUE, FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved/Terminated Formula</label>
    <type>Checkbox</type>
</CustomField>