force-app/main/default/objects/Bank_Submission__c/fields/Apps__c.field-meta.xml
<CustomField>
    <fullName>Apps__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send Apps for Signature</fullName>
            </value>
            <value>
                <fullName>Pending Signature</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
                <label>Submitted - Awaiting Initial Feedback</label>
            </value>
            <value>
                <fullName>Pending Merchant Response</fullName>
            </value>
            <value>
                <fullName>Pending ISO Response</fullName>
            </value>
            <value>
                <fullName>Pending ISO &amp; Merchant Response</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>HOLD</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Placeholder</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
                <isActive>false</isActive>
                <label>Expired</label>
            </value>
            <value>
                <fullName>Pending: ISO</fullName>
                <isActive>false</isActive>
                <label>Pending: ISO</label>
            </value>
            <value>
                <fullName>Pending: Merchant</fullName>
                <isActive>false</isActive>
                <label>Pending: Merchant</label>
            </value>
            <value>
                <fullName>Prevetting</fullName>
                <isActive>false</isActive>
                <label>Prevetting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>