force-app/main/default/objects/Bank_Submission__c/fields/Bank_ISO_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_ISO_Name__c</fullName>
    <formula>ISO_MSP_Or_Broker__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank/ISO Name</label>
    <type>Text</type>
</CustomField>