force-app/main/default/objects/Bank_Submission__c/fields/CAID__c.field-meta.xml
<CustomField>
    <fullName>CAID__c</fullName>
    <label>CAID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>