force-app/main/default/objects/Bank_Submission__c/fields/CBHero_setup_complete__c.field-meta.xml
<CustomField>
    <fullName>CBHero_setup_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this once CBHero has all information they need from the merchant and CBHero setup has been completed.</description>
    <inlineHelpText>Check this once CBHero has all information they need from the merchant and CBHero setup has been completed.</inlineHelpText>
    <label>CBHero setup complete?</label>
    <type>Checkbox</type>
</CustomField>