force-app/main/default/objects/Bank_Submission__c/fields/Confirmed_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Descriptor__c</fullName>
    <description>Descriptor as confirmed by ISO.</description>
    <inlineHelpText>Descriptor as confirmed by ISO.</inlineHelpText>
    <label>Confirmed Descriptor</label>
    <type>TextArea</type>
</CustomField>