force-app/main/default/objects/Bank_Submission__c/fields/Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>Declined_Date__c</fullName>
    <label>Declined Date</label>
    <type>Date</type>
</CustomField>