force-app/main/default/objects/Bank_Submission__c/fields/Gateway_Username__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Username__c</fullName>
    <description>Username for merchant&apos;s gateway.</description>
    <inlineHelpText>Username for merchant&apos;s gateway.</inlineHelpText>
    <label>Gateway Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>