force-app/main/default/objects/Bank_Submission__c/fields/Hard_or_Soft_Cap__c.field-meta.xml
<CustomField>
    <fullName>Hard_or_Soft_Cap__c</fullName>
    <label>Hard or Soft Cap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>