force-app/main/default/objects/Bank_Submission__c/fields/IC__c.field-meta.xml
<CustomField>
    <fullName>IC__c</fullName>
    <description>Interchange Plus Pricing</description>
    <inlineHelpText>Interchange Plus Pricing</inlineHelpText>
    <label>IC+</label>
    <length>4</length>
    <type>Text</type>
</CustomField>