force-app/main/default/objects/Bank_Submission__c/fields/ISO_MSP_Or_Broker__c.field-meta.xml
<CustomField>
    <fullName>ISO_MSP_Or_Broker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ISO</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Bank_Submissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>