force-app/main/default/objects/Bank_Submission__c/fields/Lead_1st_Owner_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lead_1st_Owner_Mobile_Phone__c</fullName>
    <description>Phone Field to be used for Bulk SMS through Mercury</description>
    <label>Lead 1st Owner Mobile Phone</label>
    <type>Phone</type>
</CustomField>