force-app/main/default/objects/Bank_Submission__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <formula>Lead__r.Id</formula>
    <label>Lead ID</label>
    <type>Text</type>
</CustomField>