force-app/main/default/objects/Bank_Submission__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <description>Used for Mercury SMS Bulk Message feature on Bank Submissions</description>
    <formula>TEXT( Lead__r.Status )</formula>
    <label>Lead Status</label>
    <type>Text</type>
</CustomField>