force-app/main/default/objects/Bank_Submission__c/fields/MCC_Code__c.field-meta.xml
<CustomField>
    <fullName>MCC_Code__c</fullName>
    <description>Assigned MCC Code</description>
    <label>MCC Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>