force-app/main/default/objects/Bank_Submission__c/fields/Merchpath_Deal__c.field-meta.xml
<CustomField>
    <fullName>Merchpath_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If account is open via merchpath and not elm.</description>
    <label>Merchpath Deal?</label>
    <type>Checkbox</type>
</CustomField>