force-app/main/default/objects/Bank_Submission__c/fields/MID_Number__c.field-meta.xml
<CustomField>
    <fullName>MID_Number__c</fullName>
    <description>MID Number</description>
    <inlineHelpText>MID Number</inlineHelpText>
    <label>MID Number</label>
    <type>TextArea</type>
</CustomField>