force-app/main/default/objects/Bank_Submission__c/fields/Mid_Qual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Mid_Qual_Rate__c</fullName>
    <label>Mid-Qual Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>