force-app/main/default/objects/Bank_Submission__c/fields/Midigator_Contract_Sent__c.field-meta.xml
<CustomField>
    <fullName>Midigator_Contract_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Midigator Contract Sent?</label>
    <type>Checkbox</type>
</CustomField>