force-app/main/default/objects/Bank_Submission__c/fields/Mobile_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Number__c</fullName>
    <label>Mobile Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>