force-app/main/default/objects/Bank_Submission__c/fields/Non_Qual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Non_Qual_Rate__c</fullName>
    <label>Non-Qual Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>