force-app/main/default/objects/Bank_Submission__c/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <description>Payment Gateway that merchant has been signed up with.</description>
    <inlineHelpText>Payment Gateway that merchant has been signed up with.</inlineHelpText>
    <label>Payment Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent Provided</fullName>
            </value>
            <value>
                <fullName>Authorize.net</fullName>
            </value>
            <value>
                <fullName>Bankcard Brokers Gateway</fullName>
            </value>
            <value>
                <fullName>ISO Provided</fullName>
            </value>
            <value>
                <fullName>Maverick Gateway</fullName>
            </value>
            <value>
                <fullName>Merchant Provided</fullName>
            </value>
            <value>
                <fullName>MiCamp&apos;s NMI</fullName>
            </value>
            <value>
                <fullName>NMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>