force-app/main/default/objects/Bank_Submission__c/fields/PFAC_Rate__c.field-meta.xml
<CustomField>
    <fullName>PFAC_Rate__c</fullName>
    <description>Payment Facilitator Rate - all in, net rate.</description>
    <inlineHelpText>Payment Facilitator Rate - all in, net rate (no other fees)</inlineHelpText>
    <label>PFAC Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>