force-app/main/default/objects/Bank_Submission__c/fields/Prevets__c.field-meta.xml
<CustomField>
    <fullName>Prevets__c</fullName>
    <label>Prevet Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
                <label>Prevet Sent / Pending Response</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes but Processing History Required</fullName>
            </value>
            <value>
                <fullName>Yes - With Conditions</fullName>
            </value>
            <value>
                <fullName>Prevet Form Required</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>No; Duplicate</fullName>
                <label>Duplicate (HOLD)</label>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>