force-app/main/default/objects/Bank_Submission__c/fields/Primary_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Decline_Reason__c</fullName>
    <description>Captures the single primary reason an application was declined by the bank/ISO or withdrawn by the merchant. Used for high-level reporting and trend analysis.</description>
    <inlineHelpText>Select one category that best explains why the application was declined or withdrawn.
If multiple reasons are present, choose the most decisive factor.</inlineHelpText>
    <label>Primary Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prohibited / Acquirer Policy</fullName>
            </value>
            <value>
                <fullName>Billing Model / Offer Structure</fullName>
            </value>
            <value>
                <fullName>Excessive Chargebacks</fullName>
            </value>
            <value>
                <fullName>Insufficient Processing History</fullName>
            </value>
            <value>
                <fullName>Fraud Concerns</fullName>
            </value>
            <value>
                <fullName>Credit / Financial Issues</fullName>
            </value>
            <value>
                <fullName>MATCH / TMF List</fullName>
            </value>
            <value>
                <fullName>Documentation / KYC Deficiencies</fullName>
            </value>
            <value>
                <fullName>Ownership / Eligibility</fullName>
            </value>
            <value>
                <fullName>Pricing / Terms Objection</fullName>
            </value>
            <value>
                <fullName>Merchant Withdrawal</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Duplicate Submission</fullName>
            </value>
            <value>
                <fullName>Multiple URLs per Legal Entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>