force-app/main/default/objects/Bank_Submission__c/fields/Qualified_Rate__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Rate__c</fullName>
    <label>Qualified Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>