force-app/main/default/objects/Bank_Submission__c/fields/Specific_Sub_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Specific_Sub_Reasons__c</fullName>
    <description>Provides detailed, granular reasons tied to the selected Primary Decline Reason.
Used to identify patterns (e.g., “Trial/Negative Option,” “Unsatisfactory Credit”) and drive operational improvements.</description>
    <inlineHelpText>Select every sub-reason mentioned in underwriting or merchant notes that supports the Primary Decline Reason.
Only sub-reasons relevant to the chosen Primary category will display.</inlineHelpText>
    <label>Specific Decline Sub-Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prohibited Products</fullName>
            </value>
            <value>
                <fullName>Acquirer Policy / Appetite</fullName>
            </value>
            <value>
                <fullName>Traffic / Marketing Risk</fullName>
            </value>
            <value>
                <fullName>Trial / Negative Option</fullName>
            </value>
            <value>
                <fullName>Subscription (Non-Trial)</fullName>
            </value>
            <value>
                <fullName>Long Fulfillment Window</fullName>
            </value>
            <value>
                <fullName>High Refund/Cancel Patterns</fullName>
            </value>
            <value>
                <fullName>CB Ratio Above Threshold</fullName>
            </value>
            <value>
                <fullName>TC40 / VE Velocity</fullName>
            </value>
            <value>
                <fullName>Pre-Arb / RDR Pattern</fullName>
            </value>
            <value>
                <fullName>No Statements Provided</fullName>
            </value>
            <value>
                <fullName>&lt;3 Months History</fullName>
            </value>
            <value>
                <fullName>Not ‘Clean’ History</fullName>
            </value>
            <value>
                <fullName>Document Tampering / Mismatch</fullName>
            </value>
            <value>
                <fullName>Synthetic / Identity Risk</fullName>
            </value>
            <value>
                <fullName>Transaction Laundering Signals</fullName>
            </value>
            <value>
                <fullName>Card-Testing / Abuse Patterns</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory Credit</fullName>
            </value>
            <value>
                <fullName>Weak Financials / Low Liquidity</fullName>
            </value>
            <value>
                <fullName>Negative Banking Patterns</fullName>
            </value>
            <value>
                <fullName>MATCH – Excessive Chargebacks</fullName>
            </value>
            <value>
                <fullName>MATCH – Fraud</fullName>
            </value>
            <value>
                <fullName>MATCH – Other / Unknown Code</fullName>
            </value>
            <value>
                <fullName>ID Unreadable / Doesn’t Match Signer</fullName>
            </value>
            <value>
                <fullName>Ownership Not Verified</fullName>
            </value>
            <value>
                <fullName>Bank Statements Missing / Inadequate</fullName>
            </value>
            <value>
                <fullName>Business Docs Missing</fullName>
            </value>
            <value>
                <fullName>Website/Domain Evidence Missing</fullName>
            </value>
            <value>
                <fullName>No U.S. Entity</fullName>
            </value>
            <value>
                <fullName>No U.S. Bank Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>