force-app/main/default/objects/Bank_Submission__c/fields/Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Submission_Status__c</fullName>
    <label>Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Submission_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
                <label>Prevet Sent</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>Yes but Processing History Required</fullName>
            </value>
            <value>
                <fullName>Yes - With Conditions</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>No; Duplicate</fullName>
            </value>
            <value>
                <fullName>Prevet Form Required</fullName>
            </value>
            <value>
                <fullName>Need to Send Apps for Signature</fullName>
            </value>
            <value>
                <fullName>Pending Signature</fullName>
            </value>
            <value>
                <fullName>Ready to Submit App</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending: Merchant</fullName>
            </value>
            <value>
                <fullName>Pending: ISO</fullName>
            </value>
            <value>
                <fullName>Pending: Merchant &amp; ISO</fullName>
            </value>
            <value>
                <fullName>Submitted to Acquirer for Final Approval</fullName>
            </value>
            <value>
                <fullName>Approved - Pending VAR</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Placeholder</fullName>
            </value>
            <value>
                <fullName>Avoid</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
                <isActive>false</isActive>
                <label>Expired</label>
            </value>
            <value>
                <fullName>Prevetting</fullName>
                <isActive>false</isActive>
                <label>Prevetting</label>
            </value>
            <value>
                <fullName>Yes but Hold</fullName>
                <isActive>false</isActive>
                <label>Yes but Hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>