force-app/main/default/objects/Bank_Submission__c/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <description>Date an account was terminated.</description>
    <inlineHelpText>Date an account was terminated.</inlineHelpText>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>