force-app/main/default/objects/Bank_Submission__c/fields/Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fee__c</fullName>
    <label>Transaction Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>