force-app/main/default/objects/Bank_Submission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Prevets__c</columns>
    <columns>Apps__c</columns>
    <columns>ISO_MSP_Or_Broker__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>