force-app/main/default/objects/Bank_Submission__c/listViews/Banks_with_Submitted_Application.listView-meta.xml
<ListView>
    <fullName>Banks_with_Submitted_Application</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Notes__c</columns>
    <columns>Apps__c</columns>
    <columns>Prevets__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apps__c</field>
        <operation>equals</operation>
        <value>Sent</value>
    </filters>
    <label>Banks with Submitted Application</label>
</ListView>