force-app/main/default/objects/Bank_Submission__c/listViews/Metro_Apps.listView-meta.xml
<ListView>
    <fullName>Metro_Apps</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ISO_MSP_Or_Broker__c</field>
        <operation>equals</operation>
        <value>First Direct Financial (Metro)</value>
    </filters>
    <filters>
        <field>Apps__c</field>
        <operation>equals</operation>
        <value>Pending Signature,Sent,Pending: Merchant</value>
    </filters>
    <filters>
        <field>Lead_Status__c</field>
        <operation>notEqual</operation>
        <value>hold,not interested,steven&apos;s leads,unqualified,suspected fraudulent,not ready for submission</value>
    </filters>
    <label>Metro Apps</label>
</ListView>