force-app/main/default/objects/Bank_Submission__c/listViews/test.listView-meta.xml
<ListView>
    <fullName>test</fullName>
    <columns>NAME</columns>
    <columns>Prevets__c</columns>
    <columns>Apps__c</columns>
    <columns>ISO_MSP_Or_Broker__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <label>test</label>
</ListView>